--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,36 +1,44 @@
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Summary | GUDLFT Registration</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Summary | GUDLFT Registration</title>
 </head>
 <body>
-        <h2>Welcome, {{club['email']}} </h2><a href="{{url_for('logout')}}">Logout</a>
-
-    {% with messages = get_flashed_messages()%}
-    {% if messages %}
-        <ul>
-       {% for message in messages %}
-            <li>{{message}}</li>
-        {% endfor %}
-       </ul>
-    {% endif%}
-    Points available: {{club['points']}}
-    <h3>Competitions:</h3>
-    <ul>
-        {% for comp in competitions%}
-        <li>
-            {{comp['name']}}<br />
-            Date: {{comp['date']}}</br>
-            Number of Places: {{comp['numberOfPlaces']}}
-            {%if comp['numberOfPlaces']|int >0%}
-            <a href="{{ url_for('book',competition=comp['name'],club=club['name']) }}">Book Places</a>
-            {%endif%}
-        </li>
-        <hr />
-        {% endfor %}
-    </ul>
-    {%endwith%}
+	<h2>Welcome, {{club['email']}} </h2><a href="{{url_for('logout')}}">Logout</a></br></br>
+	<div>
+		{% if error_messages %}
+			{% for message in error_messages %}
+				{{ message }}</br>
+			{% endfor %}
+		</br></br>
+		{% endif %}
+	</div>
+	
+	{% with messages = get_flashed_messages()%}
+	{% if messages %}
+	<ul>
+		{% for message in messages %}
+		<li>{{message}}</li>
+		{% endfor %}
+	</ul>
+	{% endif%}
+	Points available: {{club['points']}}
+	<h3>Competitions:</h3>
+	<ul>
+		{% for comp in competitions%}
+		<li>
+			{{comp['name']}}<br/>
+			Date: {{comp['date']}}</br>
+			Number of Places: {{comp['numberOfPlaces']}}
+			{%if comp['numberOfPlaces']|int >0%}
+			<a href="{{ url_for('book',competition=comp['name'],club=club['name']) }}">Book Places</a>
+			{%endif%}
+		</li>
+		<hr/>
+		{% endfor %}
+	</ul>
+	{%endwith%}
 
 </body>
 </html>
