--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -8,15 +8,18 @@
 	<h2>Welcome, {{club['email']}} </h2><a href="{{url_for('logout')}}">Logout</a></br></br>
 	<div>
 		{% if error_messages %}
-			{% for message in error_messages %}
-				{{ message }}</br>
-			{% endfor %}
+		{% for message in error_messages %}
+		{{ message }}</br>
+		{% endfor %}
 		</br></br>
 		{% endif %}
 	</div>
 	
 	{% with messages = get_flashed_messages()%}
 	{% if messages %}
+	<ul>
+		You've used {{ points }} points
+	</ul>
 	<ul>
 		{% for message in messages %}
 		<li>{{message}}</li>
